Desktop version ready

--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./style.css" />
-    <title>Document</title>
+    <link rel="icon" href="./Images/heart.svg">
+    <title>Expanding Cards</title>
   </head>
 
   <body>
-    <h1>Hello there</h1>
+    <div class="container">
+      <div class="panel"><h3>Mountain</h3></div>
+      <div class="panel"><h3>Mountain</h3></div>
+      <div class="panel"><h3>Mountain</h3></div>
+      <div class="panel"><h3>Mountain</h3></div>
+      <div class="panel"><h3>Mountain</h3></div>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
