Mobile version ready

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./media.css">
     <link rel="icon" href="./Images/heart.svg">
     <title>Expanding Cards</title>
   </head>
